@startuml Adapter_Pattern
title Adapter Pattern - Sistema de Análisis de Riesgo Emocional

' Fuerza motor interno (sin Graphviz/dot)
!pragma layout smetana

interface ProcesadorTexto {
  +procesar(texto: String): Object
}

class ProcesadorPalabrasClave {
  +procesadores_dict: dict
  +procesar(texto: String): dict
}

class ProcesadorVectorial {
  +vectorizador: TfidfVectorizer
  +procesar(texto: String): list
}

class AdaptadorProcesador {
  -procesador_adaptado: ProcesadorTexto
  +AdaptadorProcesador(p: ProcesadorTexto)
  +procesar(texto: String): dict
  -adaptarResultado(resultado: Object): dict
}

class AdministradorAnalisisTexto {
  -adaptador: AdaptadorProcesador
  +AdministradorAnalisisTexto(a: AdaptadorProcesador)
  +analizar(texto: String): dict
}

ProcesadorPalabrasClave ..|> ProcesadorTexto
ProcesadorVectorial ..|> ProcesadorTexto

AdaptadorProcesador *-- ProcesadorTexto : envuelve
AdministradorAnalisisTexto o-- AdaptadorProcesador : usa

note right of AdaptadorProcesador
Unifica interfaces heterogéneas:
- ProcesadorPalabrasClave retorna dict
- ProcesadorVectorial retorna list
- Ambas se adaptan a un formato consistente
end note

@enduml
